Address 1.8 and Commons related deprecation warnings.